wacc/test/golden/semanticErr.function.doubleArgDef
# functions cannot define the same argument twice

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int foo(int x, int x) is
	return x
  end

  skip
end

In test/wacc_examples/invalid/semanticErr/function/doubleArgDef.wacc (line 12, column 7):
Duplicate parameters
> begin
>   int foo(int x, int x) is
>       ^
> 	return x

